--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
-body{
-    background-image: url("./img/milkyway-background.jpeg");
+@font-face {
+    font-family: Trispace;
+    src: url("/fonts/Trispace-Regular.ttf")  format('truetype');
+    font-weight: normal;
+}
+
+@font-face{
+    font-family: Trispace;
+    src:url("/fonts/Trispace-Bold.ttf")  format('truetype');
+    font-weight: bold;
+        
 }
