--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,54 @@
     font-weight: bold;
         
 }
+
+body{
+    font-family:Trispace,serif;
+    background-color: rgb(41, 41, 41);
+    margin:0;
+}
+
+.container{
+    display:flex;
+    justify-content: space-between;
+}
+
+
+/* Side Hero */
+
+.side-hero{
+    display:flex;
+    align-items: center;
+    flex:1;
+    height:100vh;
+    background-image: url(/img/milkyway-background.jpeg);
+    background-size: cover;
+}
+
+.title{
+    width:100%;
+    padding:3px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(115, 115, 115, 0.193);
+}
+
+.title h1{
+    font-size:3rem;
+    color:rgb(242, 242, 242);
+    margin:0;
+}
+
+.title img{
+    height:75px;
+    width:75px;
+    padding:10px;
+}
+
+/* Form */
+
+.side-form{
+    background-color: aliceblue;
+    flex:1.5;
+}
