--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body{
     font-family:Trispace,serif;
     background-color: rgb(41, 41, 41);
     margin:0;
+    background-color: rgb(228, 230, 238);
+
 }
 
 
@@ -45,7 +47,7 @@ button[type=submit]:active{
     display:flex;
     align-items: center;
     /* flex:1; */
-    height:16rem;
+    height:300px;
     background-image: url(/img/milkyway-background.jpeg);
     background-size: cover;
     background-position: center;
@@ -87,7 +89,7 @@ button[type=submit]:active{
     margin-bottom: 10px;
     max-width: 650px;
     font-size: 1.1rem;
-    padding-left:30px;
+    padding:0 30px;
 }
 
 .form{
@@ -122,6 +124,8 @@ form input{
     height:1.5rem;
     font-size: 1rem;
     padding:3px 5px;
+    border-radius: 5px;
+    border: 1px grey solid;
 }
 
 form label{
@@ -135,7 +139,25 @@ form label{
     flex-direction: column;
     margin:30px 0;
     align-items: center;
-    
+}
+
+.form-submit > p {
+    max-width: 15rem;
+    text-align: center;
+}
+
+input{
+    outline:none;
+}
+/* Input format */
+input:focus:invalid{
+    outline:none;
+    border: 1px solid #d62629;
+}
+
+input:focus:valid{
+    outline:none;
+    border: 1px solid #26d63e;
 }
 
 @media screen and (min-width: 900px) {
@@ -170,5 +192,9 @@ form label{
 
     .form-submit{
         align-items: flex-start;
+    }
+
+    .form-submit > p {
+        max-width: 100%;
     }
   }
